# rz-t8x

./: .gitignore  LICENSE  Makefile  README.md  asm_t8x.c  asm_t8x.h  meson.build
libz/analysis/p/: analysis_t8x.c
libz/asm/arch/t8x/: t8x.h  t8x_disas.c
libz/asm/cpus/: t8x.sdb.txt
